<resources>
    <string name="app_name">SIAP</string>
    <string name="sub_title">SHE INTEGRATED APPLICATION</string>
    <string name="button_ijin">PENGAJUAN IJIN KERJA</string>
    <string name="button_rca">RCA</string>
    <string name="button_induction">SHE INDUCTION</string>
    <string name="button_comissioning">COMISSIONING ALAT</string>
    <string name="button_per_ijin">PERSETUJUAN IJIN KERJA</string>
    <string name="button_laporan_insiden">LAPORAN INSIDEN</string>
    <string name="button_masuk">MASUK</string>
    <string name="button_exit">KELUAR</string>
    <string name="button_submit">SUBMIT</string>
    <string name="button_next">NEXT</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_back">BACK</string>
    <string name="text_portal_masuk">PORTAL MASUK</string>
    <string name="text_moda">MODE ADMIN</string>
    <string name="text_modu">MODE UMUM</string>
    <string name="text_modp">MODE PELAKSANA</string>
    <string name="text_masuk">Masuk sebagai:</string>
    <string name="text_password">Password</string>
    <string name="text_colon">:</string>
    <string name="ok">OK</string>
    <string name="spinner_pilihan_user">Pilihan User</string>
    <string name="spinner_pilihan">Pilihan</string>
    <string name="spinner_unit_kerja">Unit Kerja</string>

    <!-- String Comission alat 1-->
    <string name="text_form_com_alat">ADMIN > COMISSIONING ALAT</string>
    <string name="text_jenis_alat">Jenis Alat</string>
    <string name="text_tanggal">Tanggal</string>
    <string name="text_tipe">Tipe</string>
    <string name="text_no_identitas">No Identitas</string>
    <string name="text_pemilik">Pemilik</string>
    <string name="text_operator">Operator</string>
    <string name="text_catatan">Catatan</string>

    <!-- String Comission alat 2 -->
    <string name="text_foto_depan">Foto Depan</string>
    <string name="text_foto_belakang">Foto Belakang</string>
    <string name="text_foto_kanan">Foto Samping Kanan</string>
    <string name="text_foto_kiri">Foto Samping Kiri</string>

    <!-- String Pengajuan Ijin Kerja 1 -->
    <string name="text_form_peng_ijker">PELAKSANA > PENGAJUAN IJIN KERJA</string>
    <string name="text_diajukan_oleh">Diajukan Oleh</string>
    <string name="text_lokasi_kerja">Lokasi Kerja</string>
    <string name="text_lingkup_kerja">Lingkup Kerja</string>
    <string name="text_jam_kerja">Jam Kerja</string>
    <string name="text_jam_kerja_hint">00.00</string>
    <string name="text_kebutuhan_alat_berat">Alat Berat</string>
    <string name="text_pekerja">Pekerja</string>
    <string name="text_kelengkapan_keselamatan">Kelengkapan Keselamatan</string>

    <!-- Checkbox Pengajuan Ijin Kerja 1 -->
    <string name="checkbox_sarung_tangan">Sarung Tangan</string>
    <string name="checkbox_kacamata">Kacamata</string>
    <string name="checkbox_masker">Masker</string>
    <string name="checkbox_body_harness">Body Harness</string>
    <string name="checkbox_pelindung_badan">Pelindung Badan</string>
    <string name="checkbox_earplug">Earplug</string>

    <!-- String Pengajuan Ijin Kerja 2 -->
    <string name="text_perlengkapan_kerja">Perlengkapan Kerja</string>
    <string name="text_izin_kerja_khusus">Izin Kerja Khusus</string>
    <string name="text_catatan_ijin_kerja">Catatan</string>

    <!-- Checkbox Pengajuan Ijin Kerja 2 -->
    <string name="checkbox_jsa_di_tempat">JSA di tempat</string>
    <string name="checkbox_isolasi_perlangkapan">Isolasi Perlengkapan</string>
    <string name="checkbox_penutupan_jalan">Penutupan Jalan</string>
    <string name="checkbox_pemutusan_listrik">Pemutusan Listrik</string>
    <string name="checkbox_tanda_khusus">Tanda Khusus</string>
    <string name="checkbox_msds">MSDS</string>
    <string name="checkbox_perancah">Perancah</string>
    <string name="checkbox_pelindung_jatuh">Pelindung Jatuh</string>
    <string name="checkbox_kebersihan_area">Kebersihan Area</string>
    <string name="checkbox_kerja_panas">Kerja Panas</string>
    <string name="checkbox_kerja_ketinggian">Kerja Ketinggian</string>
    <string name="checkbox_kerja_galian">Kerja Galian</string>
    <string name="checkbox_kerja_listrik">Kerja Listrik</string>
    <string name="checkbox_kerja_angkat_angkut">Kerja Angkat Angkut</string>
    <string name="checkbox_kerja_area_terbatas">Kerja Area Terbatas</string>

    <!-- String Laporan Insiden -->
    <string name="text_form_laporan_insiden">ADMIN > LAPORAN INSIDEN</string>
    <string name="text_nama_korban">Nama Korban</string>
    <string name="text_ttl_korban">TTL Korban</string>
    <string name="text_pekerjaan">Pekerjaan</string>
    <string name="text_unit_kerja">Unit Kerja</string>
    <string name="text_tipe_insiden">Tipe Insiden</string>
    <string name="text_kronologi">Kronologi</string>
    <string name="text_saksi_kejadian">Saksi Kejadian</string>
    <string name="text_waktu_kejadain">Waktu Terjadi</string>
    <string name="text_akibat_insiden">Akibat Insiden</string>
    <string name="text_kerugian">Kerugian</string>
    <string name="text_kerugian_waktu">Waktu(hari)</string>
    <string name="text_kerugian_material">Material(rupiah)</string>
    <string name="text_dokumentasi">Dokumentasi</string>

    <!-- Checkbox Laporan Insiden -->
    <string name="checkbox_kecelakaan">Kecelakaan</string>
    <string name="checkbox_nearmiss">Nearmiss</string>

    <!-- String Persetujuan Ijin Kerja -->
    <string name="text_form_persetujuan_ijin_kerja">ADMIN > PERSETUJUAN IJIN KERJA</string>
    <string name="text_diajukan_oleh_persetujuan">Diajukan oleh</string>
    <string name="text_tanggal_pengajuan">Tgl Pengajuan</string>
    <string name="text_persetujuan">Persetujuan</string>
    <string name="text_detail">DETAIL</string>
    <string name="text_refresh">REFRESH</string>

    <!-- String Induction -->
    <string name="text_form_she_induction">ADMIN > SHE INDUCTION</string>
    <string name="text_nama_peserta">Nama Peserta</string>
    <string name="text_tanggal_induction">Tanggal</string>
    <string name="text_no_telpon">No. Telepon</string>
    <string name="text_jabatan">Jabatan</string>
    <string name="text_unit_kerja_induction">Unit Kerja</string>
    <string name="text_no_ktp">No KTP</string>
    <string name="text_foto_peserta">Foto Peserta</string>

    <!-- Spinner jenis user -->
    <string-array name="user_array">
        <item>ADMIN</item>
        <item>PELAKSANA</item>
    </string-array>

    <!-- Spinner jenis alat -->
    <string-array name="alat_array">
        <item>EXCAVATOR</item>
        <item>BULLDOZER</item>
        <item>DUMP TRUCK</item>
        <item>GRADER</item>
        <item>COMPACTOR</item>
        <item>LIGHT VEHICLE</item>
        <item>TOWER LAMP</item>
        <item>GENSET</item>
        <item>WHELL LOADER</item>
        <item>CRANE</item>
        <item>TRUCK TANGKI</item>
    </string-array>

    <!-- Spinner unit kerja -->
    <string-array name="unit_kerja_array">
        <item>Unit Kerja</item>
        <item>Karyawan Wika</item>
        <item>Operator Wika</item>
        <item>Harian Wika</item>
        <item>Pekerja Mandor</item>
        <item>Subkontraktor</item>
    </string-array>
</resources>
