<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_uimode_umum"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.wika.she.ModeUmum"
    android:background="@color/head_bg">


    <TextView
        android:id="@+id/text_modu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_modu"
        android:textStyle="bold"
        android:textSize="@dimen/menu_text_size"
        android:textColor="@color/menu_text_color"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
                android:id="@+id/button_rca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/button_bg"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/button_text_size"
                android:text="@string/button_rca"
                android:gravity="center"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="8"
        android:gravity="center|bottom"
        android:orientation="vertical" >
        <Button
            android:id="@+id/button_exit"
            android:onClick="exit"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:text="@string/button_exit"/>
    </LinearLayout>
</LinearLayout>
